plugins {
    id 'org.springframework.boot' version '2.6.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

compileJava {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2021.0.0")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    // https://github.com/graphql-java-kickstart/graphql-spring-boot
    implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:12.0.0'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-test'

    // Cache
    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.5'

    // Validations
    implementation 'org.hibernate.validator:hibernate-validator'

    implementation 'commons-io:commons-io:2.11.0'

    // Extended scalars
    implementation ('com.graphql-java:graphql-java-extended-scalars:17.0') {
        exclude group: 'com.graphql-java', module: 'graphql-java'
    }
    implementation 'org.projectlombok:lombok:1.18.22'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:12.0.0'

    // to embed GraphQL Playground tool at hostname:port/playground
    // runtimeOnly 'com.graphql-java-kickstart:playground-spring-boot-starter:11.1.0'

    // to embed GraphQL altair tool at hostname:port/altair
    //implementation 'com.graphql-java-kickstart:altair-spring-boot-starter:11.1.0'

    // to embed Voyager tool at hostname:post/voyager
    runtimeOnly 'com.graphql-java-kickstart:voyager-spring-boot-starter:11.1.0'

    // GraphiQL
    runtimeOnly 'com.graphql-java:graphiql-spring-boot-starter:5.0.2'

    // Lombok and commons for boilerplate code
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor "org.projectlombok:lombok:1.18.22"

    implementation 'com.graphql-java-kickstart:altair-spring-boot-starter:11.1.0'
    // to embed Altair tool
    // runtimeOnly 'com.graphql-java-kickstart:altair-spring-boot-starter:12.0.0'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

test {
    useJUnitPlatform()
}